# HWqt

./: README.md
Less_1/: README.md
Less_2/: README.md
Less_2/Task_1/: CMakeLists.txt  main.cpp
Less_3/: README.md
Less_3/Task_1/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  login.cpp  login.h
Less_3/Task_1/ui/: login.ui  mainwindow.ui
Less_4/: README.md
Less_4/Task_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Less_4/Task_1/ui/: mainwindow.ui
